--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sample</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
+</head>
+<body>
+    <div class="row justify-content-center align-items-center vw-100 vh-100">
+        <div class="col-10 col-md-6">
+            <div class="card">
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <div class="row">
+                        <div class="col-12 col-md-8">
+                            <div class="card mb-2">
+                                <div class="card-body p-0">
+                                    <a href="hr_dept.html" class="w-100 h-100">HR Department</a>
+                                </div>
+                            </div>
+                            <div class="card mb-2">
+                                <div class="card-body p-0">
+                                    <a href="trade_dept.html" class="w-100 h-100">Trade Marketing Department</a>
+                                </div>
+                            </div>
+                            <div class="card mb-2">
+                                <div class="card-body p-0">
+                                    <a href="warehouse_dept.html" class="w-100 h-100">Warehouse Logistices Merchandise</a>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-body p-0">
+                                    <a href="sales_dept.html" class="w-100 h-100">Sales Department</a>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-body p-0">
+                                    <a href="customer_dept.html" class="w-100 h-100">Customer Service</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="bootstrap.min.js"></script>
+</body>
+</html>
