--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="card-body d-flex justify-content-center align-items-center">
                     <div class="row">
-                        <div class="col-12 col-md-8">
+                        <div class="col-12">
                             <div class="card mb-2">
                                 <div class="card-body p-0">
                                     <a href="hr_dept.html" class="w-100 h-100">HR Department</a>
