--- a/index.html
+++ b/index.html
@@ -1,45 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample</title>
     <link rel="stylesheet" href="bootstrap.min.css">
 </head>
+
 <body>
     <div class="row justify-content-center align-items-center vw-100 vh-100">
-        <div class="col-10 col-md-6">
-            <div class="card">
-                <div class="card-body d-flex justify-content-center align-items-center">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card mb-2">
-                                <div class="card-body p-0">
-                                    <a href="hr_dept.html" class="w-100 h-100">HR Department</a>
-                                </div>
-                            </div>
-                            <div class="card mb-2">
-                                <div class="card-body p-0">
-                                    <a href="trade_dept.html" class="w-100 h-100">Trade Marketing Department</a>
-                                </div>
-                            </div>
-                            <div class="card mb-2">
-                                <div class="card-body p-0">
-                                    <a href="warehouse_dept.html" class="w-100 h-100">Warehouse Logistices Merchandise</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-body p-0">
-                                    <a href="sales_dept.html" class="w-100 h-100">Sales Department</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-body p-0">
-                                    <a href="customer_dept.html" class="w-100 h-100">Customer Service</a>
-                                </div>
-                            </div>
-                        </div>
+        <div class="col-10 col-md-4">
+            <div class="card border-dark-subtle shadow-lg p-3">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <div class="row justify-content-center align-items-center mb-5">
+                        <img src="vivobot.png" alt="Vivo Bot" class="col-3 img-fluid rounded-circle">
+                        <img src="logo.png" alt="Vivo Logo" class="col-6 img-fluid">
+                    </div>
+                    <div class="row justify-content-center">
+                        <a href="hr_dept.html" class="col-10 mb-2 btn btn-light border-dark-subtle shadow-sm py-3">HR Department</a>
+
+                        <a href="trade_dept.html" class="col-10 mb-2 btn btn-light border-dark-subtle shadow-sm py-3">Trade Marketing Department</a>
+
+                        <a href="warehouse_dept.html" class="col-10 mb-2 btn btn-light border-dark-subtle shadow-sm py-3">Warehouse Logistices Merchandise</a>
+
+                        <a href="sales_dept.html" class="col-10 mb-2 btn btn-light border-dark-subtle shadow-sm py-3">Sales Department</a>
+
+                        <a href="customer_dept.html" class="col-10 btn btn-light border-dark-subtle shadow-sm py-3">Customer Service</a>
                     </div>
                 </div>
             </div>
@@ -47,4 +34,5 @@
     </div>
     <script src="bootstrap.min.js"></script>
 </body>
+
 </html>
