--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample</title>
+    <title>Select Department</title>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <style>
+        .links-container > a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,7 +22,7 @@
                         <img src="vivobot.png" alt="Vivo Bot" class="col-3 img-fluid rounded-circle">
                         <img src="logo.png" alt="Vivo Logo" class="col-6 img-fluid">
                     </div>
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center links-container">
                         <a href="hr_dept.html" class="col-10 mb-2 btn btn-light border-dark-subtle shadow-sm py-3">HR Department</a>
 
                         <a href="trade_dept.html" class="col-10 mb-2 btn btn-light border-dark-subtle shadow-sm py-3">Trade Marketing Department</a>
